--- a/chemnaFC/templates/chemnaFC/ticket.html
+++ b/chemnaFC/templates/chemnaFC/ticket.html
@@ -62,6 +62,7 @@
     margin-top: 10px;
   }
 </style>
+<header>{% include "chemnaFC/header/header.html" %}</header>
 
 <div class="ticket-container">
   <div class="ticket-header">
@@ -85,7 +86,7 @@
   </div>
 
   <div class="ticket-barcode">
-    <img src="{% static 'chemnaFC/images/barcode.png' %}" alt="Ticket Barcode" class="ticket-barcode-image">
+    <img src="{% static 'chemnaFC/images/barcode.jpg' %}" alt="Ticket Barcode" class="ticket-barcode-image">
   </div>
 
   <div class="ticket-footer">
