--- a/chemnaFC/templates/chemnaFC/fanPage.html
+++ b/chemnaFC/templates/chemnaFC/fanPage.html
@@ -46,7 +46,7 @@
     background-color: #ff1a1a;
   }
 </style>
-
+<header>{% include "chemnaFC/header/header.html" %}</header>
 <div class="fan-container">
   <h2 class="fan-title">Join the Fan Community</h2>
 
