--- a/chemnaFC/templates/chemnaFC/index.html
+++ b/chemnaFC/templates/chemnaFC/index.html
@@ -101,7 +101,7 @@
 <div class="container">
   <h1>Welcome to Chemna Football Club (CFC)</h1>
   <p class="intro">
-    A dynamic and passionate football team dedicated to excellence on and off the field. Founded in [insert year], CFC has grown to become one of the most respected and successful football clubs in the region.
+    A dynamic and passionate football team dedicated to excellence on and off the field. Founded in 1994, CFC has grown to become one of the most respected and successful football clubs in the region.
   </p>
 
   <img src="{% static "chemnaFC/images/stadium.jpg" %}" alt="Stadium" class="feature-img" />
@@ -127,5 +127,4 @@
   </p>
 </div>
 <footer>{% include "chemnaFC/header/footer.html" %}</footer>
-
 {% endblock %}
