--- a/chemnaFC/templates/chemnaFC/dashBoard.html
+++ b/chemnaFC/templates/chemnaFC/dashBoard.html
@@ -58,10 +58,10 @@
       <div class="form-container">
         <h2>{{ form_name }}</h2>
         <form method="post">
-          {% csrf_token %}
+          {% comment %} {% csrf_token %}
           {{ form_obj.as_p }}
           <button type="submit">Submit</button>
-        </form>
+        </form> {% endcomment %}
       </div>
     {% endfor %}
   </div>
