--- a/chemnaFC/templates/chemnaFC/forgot.html
+++ b/chemnaFC/templates/chemnaFC/forgot.html
@@ -6,6 +6,7 @@
 <form action="/">
     {% csrf_token %}
     {{form.as_p}}
+    <button type="submit" value="hidden"> get verification </button>
 </form>
 {% endblock content %}
 
