--- a/chemnaFC/templates/chemnaFC/login.html
+++ b/chemnaFC/templates/chemnaFC/login.html
@@ -88,6 +88,6 @@
     </form>
 
     <p class="signup-link">Don't have an account? <a href="{% url "register_page" %}">Sign up</a></p>
-    <p class="signup-link">forgot my password <a href="{% url "forgot_page" %}">forgot</a></p>
+    <p class="signup-link">forgot my password? <a href="{% url "forgot_page" %}">forgot</a></p>
 </div>
 {% endblock content %}
