--- a/chemnaFC/templates/chemnaFC/reset_password_email.html
+++ b/chemnaFC/templates/chemnaFC/reset_password_email.html
@@ -1,3 +1,4 @@
+{% load custom_filters %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -63,7 +64,7 @@
       </p>
       <p>
         <a
-          href="{{ domain }}{% url 'reset_password' uidb64 token %}"
+          href="{{ domain }}{% url 'reset_password' uidb64=user.pk|urlsafe_base64 token=token %}"
           class="button"
           >Reset Password</a
         >
